
Update 2 August 2010

Version Beta 1.15

	Moved all web files in SVN to /trunk/web-app
	Moved all flex files in SVN to /trunk/flex-app
	Move FileSender2.swf file to www/swf/ to allow correct command line compiling 
	Update relative include paths for updated structure
	242 Move config to own folder /config
	244 restructure svn to support branches and tags
	

Version Beta 1.14
	Bug Fixes
	129,130,132 valid email adresses are broken 
	231 File size shows error when creating vouchers
	230 Incorrect email message sent when using a voucher
	228 Vouchers are deleted straight after being created
	229 filename error when creating voucher
	180	sender email address gets truncated beyond 3rd domain level
	186	filenames with double singlequotes fail	
	190	To: and from: reversed when uploading using a voucher
	191	Help
	192	About
	194	Files and vouchers do not expire after expiry date
	195	expiry date selection is open-ended when issuing voucher and adding a new recipient
	196	Email everyone when voucher deleted	ricoshae
	198	Voucher Deleted notification
	
	
	Audit Fixes
	2.5,2.6,2.7,2.2,2.3

Version Beta 1.13
	Bug Fixes
	#107	incorrect warning ("browse for a file") on invalid recipient email input
	#166	Screen Size
	#170	language quirk in MyFiles "add new recipient"
	#171	no-caching tags in all FileSender pages
	#172	Fix Version Number State overide
	#173	SAML Session expiration errors - instead of requesting logon
	#174	size calculation wrong for larger files
	#175	saml_uid_attribute parsing code not 100%
	#177	unexpected voucher behaviour when voucher user is already logged in
	#178	security bug: back button on download menu
	#179	security: log-off behaviour across multiple browser tabs incorrect

Version Beta 1.12
	
	Bug Fixes
		*  #168: Admin email added to config
		*  #167: Default config date format fixed 
	

Version Beta 1.11
	
	New Features
		* #160: email address unsuitable as GUID
		* #152: include voucher issuer on recipient list of file